Another initial commit

--- a/index.html
+++ b/index.html
@@ -1,116 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Savar Jain</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald&family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+  <title>Savar Jain</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="images/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Sacramento&display=swap" rel="stylesheet" />
+</head>
 
-      <h1>I'm Savar.</h1>
-      <h2 class="title">
-        an <span style="text-decoration: underline">aspiring</span> SWE.
-      </h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img class="mountain" src="images/mountain.png" alt="mountain-img" />
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+
+    <h1>I'm Savar!</h1>
+    <h2 class="title">
+      an <span style="text-decoration: underline">aspiring</span> SWE.
+    </h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+    <img class="mountain" src="images/mountain.png" alt="mountain-img" />
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="self-img" src="images/savar.png" alt="savar-img" />
+      <h2 class="subheading">Hello.</h2>
+      <p class="self-decription">
+        I am Savar Jain, a 16-year-old Senior at Westhill High School,
+        and I am looking to major in Computer Science.
+      </p>
+      <br />
     </div>
-
-    <div class="middle-container">
-      <div class="profile">
-        <img class="self-img" src="images/savar.png" alt="savar-img" />
-        <h2 class="subheading">Hello.</h2>
-        <p class="self-decription">
-          I am Savar Jain, a 16-year-old Rising Senior at Westhill High School,
-          and I am looking to major in Computer Science.
+    <hr class="rule" />
+    <div class="skills">
+      <h2 class="subheading">My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill-img1" src="images/coding.png" alt="coding-img" />
+        <h3>Programming & DSA</h3>
+        <p class="skill-text">
+          I have been programming for nearly 3 years now and taken classes
+          such as AP CSA, Data Structures and Algorithms, Cyber Security. I
+          will be a TA next year for DSA and be doing an Independent Study in
+          Artificial Intelligence.
         </p>
-        <br />
-      </div>
-      <hr class="rule" />
-      <div class="skills">
-        <h2 class="subheading">My Skills.</h2>
-        <div class="skill-row">
-          <img class="skill-img1" src="images/coding.png" alt="coding-img" />
-          <h3>Programming & DSA</h3>
-          <p class="skill-text">
-            I have been programming for nearly 3 years now and taken classes
-            such as AP CSA, Data Structures and Algorithms, Cyber Security. I
-            will be a TA next year for DSA and be doing an Independent Study in
-            Artificial Intelligence.
-          </p>
-          <div class="credit-flaticon">
-            Icons made by
-            <a
-              href="https://www.flaticon.com/authors/prettycons"
-              title="prettycons"
-              >prettycons</a
-            >
-            from
-            <a href="https://www.flaticon.com/" title="Flaticon"
-              >www.flaticon.com</a
-            >
-          </div>
-        </div>
-
-        <div class="skill-row">
-          <img
-            class="skill-img2"
-            src="images/rubiks-cube-2.gif"
-            alt="rubiks-cube-img"
-          />
-          <h3>Rubik's Cubes</h3>
-          <p class="skill-text">
-            I love solving rubik's cubes! I currently know how to solve
-            <span class="cube-names">
-              2x2x2, 3x3x3, 4x4x4, 5x5x5, Megaminx,
-            </span>
-            and a <span class="cube-names">Pyraminx</span>
-          </p>
+        <div class="credit-flaticon">
+          Icons made by
+          <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a>
+          from
+          <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
       </div>
-      <hr class="rule" />
-      <div class="contact-me">
-        <h2 class="subheading">Get in Touch</h2>
-        <!-- <h3>Lorem ipsum dolor sit amet, non elit.</h3> -->
-        <p class="line-before-btn">
-          Do you love Computer Science as much as I do or just wanna say hi?
-          Let's talk and learn together!
+
+      <div class="skill-row">
+        <img class="skill-img2" src="images/rubiks-cube-2.gif" alt="rubiks-cube-img" />
+        <h3>Rubik's Cubes</h3>
+        <p class="skill-text">
+          I love solving rubik's cubes! I currently know how to solve
+          <span class="cube-names">
+            2x2x2, 3x3x3, 4x4x4, 5x5x5, Megaminx,
+          </span>
+          and a <span class="cube-names">Pyraminx</span>
         </p>
-        <a class="btn" href="mailto:jainsavar@gmail.com">CONTACT ME</a>
       </div>
     </div>
-
-    <div class="bottom-container">
-      <a
-        class="footer-link"
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://linkedin.com/in/savarjain"
-      >
-        LinkedIn &#x2197;
-      </a>
-      <a
-        class="footer-link"
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://github.com/SavarJ"
-        >Github &#x2197;</a
-      >
-      <a class="footer-link" href="#">Back-to-Top</a>
-      <p class="last-line">© 2021 Savar Jain.</p>
+    <hr class="rule" />
+    <div class="contact-me">
+      <h2 class="subheading">Get in Touch</h2>
+      <!-- <h3>Lorem ipsum dolor sit amet, non elit.</h3> -->
+      <p class="line-before-btn">
+        Do you love Computer Science as much as I do or just wanna say hi?
+        Let's talk and learn together!
+      </p>
+      <a class="btn" href="mailto:jainsavar@gmail.com">CONTACT ME</a>
     </div>
-    <div></div>
-  </body>
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" target="_blank" rel="noopener noreferrer" href="https://linkedin.com/in/savarjain">
+      LinkedIn &#x2197;
+    </a>
+    <a class="footer-link" target="_blank" rel="noopener noreferrer" href="https://github.com/SavarJ">Github
+      &#x2197;</a>
+    <a class="footer-link" href="#">Back-to-Top</a>
+    <p class="last-line">© 2021 Savar Jain.</p>
+  </div>
+  <div></div>
+</body>
+
 </html>
